f5,f6実装 f6はactivityで作ったが、画面遷移図をよく見るとlistview内に表示しているため、fragmentで作る必要あり？

--- a/app/src/main/res/layout/a9.xml
+++ b/app/src/main/res/layout/a9.xml
@@ -47,7 +47,7 @@
         android:padding="7dp"
         android:text="パスワード再設定メール送信"
         android:textColor="#0CBBB6"
-        android:textSize="20dp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/backForget"
@@ -62,5 +62,5 @@
         android:padding="7dp"
         android:text="ログイン画面に戻る"
         android:textColor="#0CBBB6"
-        android:textSize="20dp" />
+        android:textSize="18dp" />
 </LinearLayout>
