--- a/app/src/main/res/layout/f6.xml
+++ b/app/src/main/res/layout/f6.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageViewSinryoF4"
+            android:id="@+id/imageViewSinryoF6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -30,7 +30,7 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/imageViewSinryoF4"
+            android:layout_below="@+id/imageViewSinryoF6"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="19dp"
             android:layout_marginRight="16dp"
@@ -38,37 +38,51 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/HospitalNameF6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/imageViewSinryoF4"
+                android:layout_below="@+id/imageViewSinryoF6"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:textColor="#666666"
                 android:textSize="18sp"
                 tools:text="病院名" />
 
-            <TextView
-                android:id="@+id/textView10"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView2"
-                android:textSize="12sp"
-                tools:text="診察日時" />
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="診察日時："
+                    android:textSize="12sp"
+                    tools:text="診察日時" />
+
+                <TextView
+                    android:id="@+id/DateF6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_toRightOf="@+id/textview"
+                    android:text="TextView"
+                    android:textSize="12sp" />
+            </RelativeLayout>
 
             <TextView
-                android:id="@+id/textView12"
+                android:id="@+id/ContentF6"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/textView10"
+                android:layout_below="@+id/textview"
                 android:layout_alignParentTop="false"
                 android:background="#0CBBB6"
+                android:text="診察内容"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
                 tools:text="診察内容" />
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/DetailF6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView12"
@@ -80,14 +94,14 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/eraseDataF4"
+            android:layout_below="@+id/eraseDataF6"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_marginTop="44dp"
             android:layout_marginBottom="30dp">
 
             <TextView
-                android:id="@+id/cancelF4"
+                android:id="@+id/cancelF6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10sp"
@@ -101,7 +115,7 @@
                 tools:name="キャンセル" />
 
             <TextView
-                android:id="@+id/addF4"
+                android:id="@+id/editF6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -117,7 +131,7 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:id="@+id/eraseDataF4"
+            android:id="@+id/eraseDataF6"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/linearLayout"
