--- a/app/src/main/res/layout/c3.xml
+++ b/app/src/main/res/layout/c3.xml
@@ -139,7 +139,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/HospitalNameF6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/linearLayout"
@@ -154,7 +154,7 @@
                 android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView2"
+                android:layout_below="@+id/HospitalNameF6"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:orientation="horizontal">
