--- a/app/src/main/res/layout/g4_input.xml
+++ b/app/src/main/res/layout/g4_input.xml
@@ -75,7 +75,7 @@
                 android:text="撮影画像" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/HospitalNameF6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -91,7 +91,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/textView2"
+                android:layout_below="@+id/HospitalNameF6"
                 android:orientation="horizontal">
 
                 <Spinner
@@ -158,7 +158,7 @@
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/linearLayout2"
@@ -170,7 +170,7 @@
                 android:id="@+id/editTextYakkyokuNameG4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView10"
+                android:layout_below="@+id/textview"
                 android:layout_centerHorizontal="true"
                 android:ems="10"
                 android:hint="〇〇薬局"
