--- a/app/src/main/res/layout/h6_input.xml
+++ b/app/src/main/res/layout/h6_input.xml
@@ -77,7 +77,7 @@
                 android:text="撮影画像" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/HospitalNameF6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -93,7 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/textView2"
+                android:layout_below="@+id/HospitalNameF6"
                 android:orientation="horizontal">
 
                 <Spinner
@@ -160,7 +160,7 @@
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/linearLayout2"
@@ -173,7 +173,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="false"
-                android:layout_below="@+id/textView10"
+                android:layout_below="@+id/textview"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:ems="10"
