--- a/app/src/main/res/layout/b0_cancertypeselect.xml
+++ b/app/src/main/res/layout/b0_cancertypeselect.xml
@@ -103,6 +103,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="43dp"
             android:layout_marginBottom="67dp"
+            android:gravity="center"
             android:dropDownWidth="match_parent" />
 
         <TextView
