ホームボタン押下時&プロセス削除時にランチャー起動すると画面に何も表示されない不具合対応。閉じたときの画面を復元する。

--- a/app/src/main/res/layout/c3.xml
+++ b/app/src/main/res/layout/c3.xml
@@ -26,6 +26,7 @@
             android:textColor="#666666"
             android:textSize="16dp"
             tools:name="ユーザー情報登録/編集" />
+
         <ImageView
             android:id="@+id/backE10N1"
             android:layout_width="wrap_content"
@@ -35,6 +36,8 @@
             android:clickable="true"
             android:scaleType="fitXY"
             android:src="@drawable/icon_close"
+            tools:layout_height="25dp"
+            tools:layout_width="25dp"
             tools:name="Combined Shape" />
         <TextView
             android:id="@+id/helpE10N1"
