--- a/app/src/main/res/layout/a4.xml
+++ b/app/src/main/res/layout/a4.xml
@@ -65,7 +65,7 @@
         android:textSize="20dp" />
 
     <TextView
-        android:id="@+id/toLoginDisp_A4"
+        android:id="@+id/btnToLoginA8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="37dp"
