--- a/app/src/main/res/layout/listelement_f_h.xml
+++ b/app/src/main/res/layout/listelement_f_h.xml
@@ -15,19 +15,33 @@
         android:id="@+id/photoImageF_H"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="false"
         android:layout_centerHorizontal="false"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="5dp"
         android:layout_marginLeft="10sp"
-        android:layout_marginRight="10sp"
         android:layout_marginTop="5dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginBottom="5dp"
         android:adjustViewBounds="true"
-        android:maxHeight="70sp"
         android:maxWidth="70sp"
+        android:maxHeight="70sp"
         android:src="@mipmap/ic_launcher" />
+
+    <ProgressBar
+        android:id="@+id/progressBarF_H"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginEnd="10sp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:visibility="invisible" />
 
     <LinearLayout
         android:layout_width="wrap_content"
