--- a/app/src/main/res/layout/listelement_g.xml
+++ b/app/src/main/res/layout/listelement_g.xml
@@ -15,18 +15,18 @@
         android:id="@+id/photoImageG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="false"
         android:layout_centerHorizontal="false"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="5dp"
         android:layout_marginLeft="10sp"
-        android:layout_marginRight="10sp"
         android:layout_marginTop="5dp"
+        android:layout_marginRight="10sp"
+        android:layout_marginBottom="5dp"
         android:adjustViewBounds="true"
-        android:maxHeight="100sp"
-        android:maxWidth="100sp"
+        android:maxWidth="70sp"
+        android:maxHeight="70sp"
         android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
@@ -66,5 +66,15 @@
         android:scaleType="fitXY"
         android:src="@drawable/button_edit"
         tools:name="Button/Edit" />
+
+    <ProgressBar
+        android:id="@+id/progressBarG"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="10dp"
+        android:visibility="invisible" />
 </RelativeLayout>
 
