--- a/app/src/main/res/layout/g4_input.xml
+++ b/app/src/main/res/layout/g4_input.xml
@@ -122,10 +122,11 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/eraseDataG4"
-                android:layout_marginTop="44dp">
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginTop="44dp"
+                android:layout_marginBottom="30dp">
 
                 <TextView
                     android:id="@+id/cancelG4"
