--- a/app/src/main/res/layout/listelement_g.xml
+++ b/app/src/main/res/layout/listelement_g.xml
@@ -49,7 +49,8 @@
         <TextView
             android:id="@+id/textViewTouyakuG"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="10sp" />
     </LinearLayout>
 
     <ImageView
