--- a/app/src/main/res/layout/e3_input.xml
+++ b/app/src/main/res/layout/e3_input.xml
@@ -79,39 +79,17 @@
                 android:text="日付"
                 android:textColor="#666666" />
 
-            <LinearLayout
-                android:id="@+id/linearLayout2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
+            <DatePicker
+                android:id="@+id/date_pickerE3"
+                android:layout_width="wrap_content"
+                android:layout_height="140dp"
                 android:layout_below="@+id/HospitalNameF6"
-                android:orientation="horizontal">
-
-                <Spinner
-                    android:id="@+id/yearE3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10sp"
-                    android:layout_marginRight="5sp"
-                    android:layout_weight="1" />
-
-                <Spinner
-                    android:id="@+id/monthE3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5sp"
-                    android:layout_marginRight="5sp"
-                    android:layout_weight="1" />
-
-                <Spinner
-                    android:id="@+id/dayE3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5sp"
-                    android:layout_marginRight="10sp"
-                    android:layout_weight="1" />
-            </LinearLayout>
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="false"
+                android:layout_marginTop="0dp"
+                android:calendarViewShown="false"
+                android:datePickerMode="spinner"
+                android:orientation="horizontal" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -156,7 +134,7 @@
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/linearLayout2"
+                android:layout_below="@+id/date_pickerE3"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="19dp"
                 android:text="開始時間" />
