--- a/app/src/main/res/layout/f4_input.xml
+++ b/app/src/main/res/layout/f4_input.xml
@@ -86,38 +86,17 @@
                 android:text="日付"
                 android:textColor="#666666" />
 
-            <LinearLayout
-                android:id="@+id/linearLayout2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
+            <DatePicker
+                android:id="@+id/date_pickerF4"
+                android:layout_width="wrap_content"
+                android:layout_height="140dp"
                 android:layout_below="@+id/HospitalNameF6"
-                android:orientation="horizontal">
-
-                <Spinner
-                    android:id="@+id/yearF4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10sp"
-                    android:layout_marginRight="5sp"
-                    android:layout_weight="1" />
-
-                <Spinner
-                    android:id="@+id/monthF4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5sp"
-                    android:layout_marginRight="5sp"
-                    android:layout_weight="1" />
-
-                <Spinner
-                    android:id="@+id/dayF4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5sp"
-                    android:layout_marginRight="10sp"
-                    android:layout_weight="1" />
-            </LinearLayout>
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="false"
+                android:layout_marginTop="0dp"
+                android:calendarViewShown="false"
+                android:datePickerMode="spinner"
+                android:orientation="horizontal" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -162,7 +141,7 @@
                 android:id="@+id/textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/linearLayout2"
+                android:layout_below="@+id/date_pickerF4"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="19dp"
                 android:text="病院名" />
