--- a/app/src/main/res/layout/b3.xml
+++ b/app/src/main/res/layout/b3.xml
@@ -248,13 +248,13 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/okusuriB3"
+                    android:id="@+id/okusurisetB3"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_alignParentBottom="false"
-                    android:layout_alignParentEnd="false"
                     android:layout_alignParentLeft="false"
+                    android:layout_alignParentEnd="false"
                     android:layout_alignParentRight="false"
+                    android:layout_alignParentBottom="false"
                     android:layout_centerHorizontal="false"
                     android:layout_centerVertical="false"
                     android:layout_weight="1"
