お薬履歴APIたたいて結果もらうところまで実装

--- a/app/src/main/res/layout/f6.xml
+++ b/app/src/main/res/layout/f6.xml
@@ -75,8 +75,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_toRightOf="@+id/textview"
-                    android:text="TextView"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    tools:text="TextView" />
             </RelativeLayout>
 
             <TextView
